plugins {
    id 'java'
    id 'eclipse'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation('org.junit.jupiter:junit-jupiter:5.11.3')
    testImplementation 'org.assertj:assertj-core:3.26.3'

    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

tasks.named("test", Test) {
    useJUnitPlatform()
}
